--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,88 +2,356 @@
 {% load static %}
 {% block content %}
 {{block.super}}
-<style>
-    
-.mouse-animation{
-    padding-top: 100px;
-    margin-left:630px;
-}
 
-.mouse-animation{
-    animation: bounce 2.6s infinite;
-  }
-  @keyframes bounce {
-    100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-55px);
-    }
-    60% {
-      transform: translateY(-60px);
-    }
-  }
-  .order-content{
-    background-attachment: fixed;
-    
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
-    padding-top: 4%;
-    padding-bottom: 4%;
-}
-.footer-content{
-    text-align: center;
-    padding-top: 60px;
-    font-family: 'Secular One', sans-serif;
-}
-.about-p{
-    width: 50%;
-    margin: auto;
-    padding-top: 70px;
-    text-align: center;
-    font-family: 'Nunito Sans', sans-serif;
-    font-weight: 600;
-}
-.about{
-    width: 100%;
-    height: 450px;
-}
-.container-story{
-  margin-top: 8%;
-}
-
-</style>
-
-<div class="order-content">
-  <h3>STORIES</h3>
-  <div class="row row-cols-1 row-cols-md-6">
-    {% for pro in all_projects %}
-      <div class="col-md-4 " style="padding-top: 100px;">
-          <div class="card h-50">
-            
-              <img src="{{pro.project_image.url}}" class="card-img-top" alt="Image"  width="100%">
-       
-            
-                <p class="card-title"><strong>"{{pro.title}}"</strong></p>
-                <a href="{% url 'oneproject' pro.id %}" style="color: black; text-align: center;">Read Story..</a>
-             
-          </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100"
+        src="https://res.cloudinary.com/zilfa/image/upload/v1620466693/photo-1424223022789-26fd8f34bba2_s2rtfz.jpg"
+        alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>PHOTO & VIDEO PRODUCTION</h5>
+        <!-- <p>YOU ARE SAFE WITH US</p> -->
+        <!-- <div class="slide-btn">
+          <button class="btn btn-1"><a href="#CONTACT">GET IN TOUCH</a></button>
+        </div> -->
       </div>
-      {% endfor %}
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100"
+        src="https://res.cloudinary.com/zilfa/image/upload/v1620467227/photo-1523145149804-5d8e0c044753_xyzgha.jpg"
+        alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>EVENT MANAGEMENT & CATERING</h5>
+        <!-- <p>YOU ARE SAFE WITH US</p> -->
+        <!-- <div class="slide-btn">
+          <button class="btn btn-2"><a href="#">FIND DOCTOR</a></button>
+        </div> -->
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100"
+        src="https://res.cloudinary.com/zilfa/image/upload/v1620466997/website-design-and-development-differences_ueqzkz.png"
+        alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>WEB DESIGN</h5>
+        <!-- <p>YOU ARE SAFE WITH US</p>
+        <div class="slide-btn">
+          <button class="btn btn-3"><a href="#guide"> VIEW LATEST NEWS</a></button> -->
+
+        </div>
+      </div>
+    </div> -->
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br>
+<br>
+
+<div class="container">
+  <div class="wedo">
+    <h1 style="font-family: 'Josefin Sans', sans-serif;">Our Services</h1>
+    <br>
+    <p style="text-align: center;">Our creative team will deliver tailor made design and service solutions to create the
+      ultimate image for your business.</p>
+    <br>
+    <div class="row">
+      <div class="col-4">
+        <div id="imgDes" class="textcolor">
+          <img src="https://res.cloudinary.com/zilfa/image/upload/v1620390256/images_ykqjz8.png" width="25%" alt="">
+          <br> BRANDING
+        </div>
+        <div id="textDes" style="display: none;" class="texttt">
+          <h6>BRANDING</h6>
+          <p>If you are a business or any other organization or individual and need a look and feel for your company –
+            We
+            can do that for you!
+
+            Designs that will be incorporated in our branding process is logo design, business cards, letterheads, email
+            signatures, social media accounts, web banners...
+          </p>
+        </div>
+      </div>
+      <div class="col-4">
+        <div id="imgDev" class="textcolor">
+          <img src="https://res.cloudinary.com/zilfa/image/upload/v1620400815/images_ofk5bo.png" width="25%" alt=""><br>
+          WEB
+          DESIGN
+        </div>
+        <div id="textDev" style="display: none;" class="texttt">
+          <h6>WEB DESIGN</h6>
+          <p>We design eye catching web banners and Facebook cover designs for your brand giving it that edgy and
+            professional look. Other digital design services include GIF pictures.
+        </div>
+      </div>
+      <div class="col-4">
+        <div id="imgProd" class="textcolor">
+          <img src="https://res.cloudinary.com/zilfa/image/upload/v1620390582/images_r1kv3t.png" width="25%" alt=""><br>
+          PRINT DESIGN
+        </div>
+        <div id="textProd" style="display: none;" class="texttt">
+          <h6>PRINT DESIGN</h6>
+          <p>We create professionally designed brochures, catalogs and other print designs. An inexpensive and easy way
+            to
+            promote your company and present information</p>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-sm">
+        <div id="imgDec" class="textcolor">
+          <img src="https://res.cloudinary.com/zilfa/image/upload/v1620395887/epbxx7rn1ceuexflj0qm.png" width="25%"
+            alt=""> <br> PHOTO & VIDEO PRODUCTION
+        </div>
+        <div id="textDec" style="display: none;" class="texttt">
+          <h6>PHOTO & VIDEO PRODUCTION</h6>
+          <p>Photos and videos are powerful communications tools, but it takes a creative story teller to connect with
+            your audience and inspire action. Our mission is to produce persuasive images that help our clients connect
+            with their audiences on a deeper level.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-sm">
+        <div id="imgDez" class="textcolor">
+          <img src="https://res.cloudinary.com/zilfa/image/upload/v1620398974/multimedia_icon_set-06-512_ydwtb5.png"
+            width="25%" style="margin-top: -0.7cm;"><br>MARKETING AND MEDIA CONSULTANCY
+        </div>
+        <div id="textDez" style="display: none;" class="texttt">
+          <h6>MARKETING AND MEDIA CONSULTANCY</h6>
+          <p>Online Marketing involves social media, PR and article circulations, directories, e-advertising, e-commerce
+            and much more than just registering your website. Thinking—a blend of the traditional, with a dose of
+            breaking the rules. Add the infusion of technology, and you have a dynamic new way to create awareness, and
+            drive sales.
+        </div>
+      </div>
+
+      <div class="col-sm">
+        <div id="imgProc" class="textcolor">
+          <img
+            src="https://res.cloudinary.com/zilfa/image/upload/v1620396017/event-management-icon-png-pictures-2_qifcgi.png"
+            width="25%" alt=""><br> EVENTS MANAGEMENT & CATERING
+        </div>
+        <div id="textProc" style="display: none;" class="texttt">
+          <h6>EVENTS MANAGEMENT & CATERING</h6>
+          <p>We manage and cover your events while helping to nurture the individual's wellbeing through conferences,
+            team buildings and team development, entertainment events that will bond a family or friends together
+            through concerts and high adrenaline rush events.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<br>
+<br>
+<section class="computer">
+  <div class="container-service">
+    <div id="service">
+      <h1 style="font-family: 'Josefin Sans', sans-serif;color: white;">Our Team</h1>
+      <br>
+      <p>In a world where everything is the same, one has to stand out and make a difference.</p>
+      <p>We climb the ladder of new ideas and open doors for growth because creativity has no limits nor does it freeze;
+      </p>
+      <p>our team has its own core of Artistry acquired from years of experience and learning which when blended
+        together results to an Artwork masterpiece.</p>
+    </div>
+  </div>
+</section>
+<div id="team">
+  <div class="container my-3 py-5 text-center">
+    <div class="row mb-5">
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="https://res.cloudinary.com/zilfa/image/upload/v1620310224/thierry_tnp2h7.png" alt=""
+              class="img-fluid rounded-circle w-50 mb-3">
+            <h4>Thierry Uwamungu</h4>
+            <h5>Lead Consultant</h5>
+            <p>He is a creative and motivated Digital Media Specialist, communication enthusiast with photography skills
+              and experience in Graphic Design.</p>
+            <div class="d-flex flex-row justify-content-center">
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-twitter">
+
+                  </i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-linkedin">
+
+                  </i>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="https://res.cloudinary.com/zilfa/image/upload/v1620310304/mizero_sxc6bm.jpg" alt=""
+              class="img-fluid rounded-circle w-50 mb-3">
+            <h4>Mizero Divin Thierry</h4>
+            <h5>Consultant</h5>
+            <p>Highly creative and multitalented graphic designer with extensive experience in web developing,
+              promotional material design, social media promotion and multimedia.</p>
+            <div class="d-flex flex-row justify-content-center">
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-twitter">
+
+                  </i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-linkedin">
+
+                  </i>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="https://res.cloudinary.com/zilfa/image/upload/v1620310295/assumpta_g8igk3.png" alt=""
+              class="img-fluid rounded-circle w-50 mb-3">
+            <h4>Assumpta Mukeshimana</h4>
+            <h5>Consultant</h5>
+            <p>Videographer, TV host and news reporter currently chairing a National Mentor-ship program in
+              Communication and Journalism in Mass Media Universities in Rwanda.</p>
+            <div class="d-flex flex-row justify-content-center">
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-twitter">
+
+                  </i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="#">
+                  <i class="fa fa-linkedin">
+
+                  </i>
+                </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
+<br>
+<br>
+<div class="alicee">
+  <footer>
+    <section id="CONTACT">
+      <div class="container">
+        <div class="main-content">
+          <div class="left box">
+            <h2>Let's Be Friends</h2>
+            <div class="content">
+              <p>We depend on our clients’ feedback. We can’t live without them. Besides, your are not just clients,
+                whoever we serve, becomes a good friend.</p>
+              <div class="social">
+                <a href="#"><span class="fab fa-facebook-f"></span></a>
+                <a href="#"><span class="fab fa-twitter"></span></a>
+                <a href="#"><span class="fab fa-linkedin"></span></a>
+              </div>
+            </div>
+          </div>
 
+          <div class="center box">
+            <h2>Address</h2>
+            <div class="content">
+              <div class="place">
+                <span class="fas fa-map-marker-alt"></span>
+                <span class="text">Kigali-City, Rwanda</span>
+              </div>
+              <div class="phone">
+                <span class="fas fa-phone-alt"></span>
+                <span class="text">(250) 788 882 871</span>
+              </div>
+              <div class="email">
+                <span class="fas fa-envelope"></span>
+                <span class="text">contact@ibabacs.rw</span>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-1"></div> -->
+          <div class="right box">
+            <h2>Contact Us</h2>
+            <div class="content">
+              <form action="#">
+                <div class="email">
+                  <!-- <div class="text">Email *</div> -->
+                  <input type="text" type="email" id="email" required placeholder="Email...">
+                </div>
+                <div class="msg">
+                  <!-- <div class="text">Message *</div> -->
+                  <textarea id="exampleFormControlTextarea1" rows="2" cols="25" required
+                    placeholder="Message..."></textarea>
+                </div>
+                <div class="btn">
+                  <button id="submit" type="submit">Send</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <center>
+          <span class="credit"><a href="#">Ibaba Ltd</a></span>
+          <span class="far fa-copyright"></span><span> 2019 All rights reserved.</span>
+        </center>
+      </div>
 
-
-
-     
+    </section>
+  </footer>
 </div>
+
+
 {% endblock %}
 {% block scripts %}
 {{block.super}}
-<script type="text/javascript" src="{%static 'js/newsletter.js'%}">
+<script type="text/javascript" src="{%static 'js/scripts.js'%}">
 </script>
 {% endblock %}
