--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,82 +1,71 @@
-{% load static %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#"> <img
+                src="https://res.cloudinary.com/zilfa/image/upload/v1620411834/ibabababa-removebg-preview_vgqr63.png"
+                alt="" style="margin-top: -0.4cm; margin-bottom: -0.4cm;"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- col-auto Starts -->
+        <div class="col-auto">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Blog
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Design</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">news</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Team</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Portofolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Portofolio</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Clients</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- col-auto Ends -->
+    </div>
+</nav>
 
 <style>
-    
-    .navi{
-       margin-left: 40%;
-       letter-spacing: 2px;
-    
+    .bg-dark {
+        background-color: black !important;
     }
-    
-    /* .box{
-       position: relative;
-        height: 40px;
-        border-radius: 10px;
-        background: #a7376f;
-        
+
+    .navbar-dark .navbar-nav .nav-link {
+        font-weight: 700;
+        font-size: 14px;
+        text-transform: uppercase;
     }
-    .box:hover > .search-txt{
-        width: 100px;
-        padding: 0 6px;
+
+    .navbar-dark .navbar-nav .nav-item {
+        margin: 0 15px;
     }
-    .box:hover > .search-txt{
-        background: white;
-    }
-    .search-btn{
-        color: #e84118;
-        float: right;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        display: flex;
-        background: #2f3640;
-        justify-content: center;
-        align-items: center;
-        transition: 0.4s;
-        
-    }
-    */
-    .search-txt{
-        border: none;
-        background: none;
-        outline: none;
-        float: left;
-        padding: 0;
-        color: #fff;
-        
-    } 
-  a{
-      font-size: 15px;
-  }
 </style>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg fixed-top">
-        
-        
-     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="navbar-toggler-icon"></span>
- </button>
- 
- {% if user.is_authenticated %}
- 
-   <div class="collapse navbar-collapse navi" id="navbarNavAltMarkup" style="font-family: 'Tajawal', sans-serif;">
-   <div class="navbar-nav">
-     <a class="nav-link active text-white" href="{% url 'myprofile' %}" style="font-weight: bold;">{{user.username}}</a>
-     <!-- <a class="nav-link text-white" href="/accounts/register/">Register</a> -->
-     <a class="nav-link" href="/accounts/password/change" style="color: rgb(192, 190, 190)">Change Password</a>
-     <a class="nav-link" href="/accounts/login" style="color: rgb(192, 190, 190)">Logout</a>
-     {% else %}
-    <a class='btn btn-default' href="/accounts/login" style="color: rgb(192, 190, 190)">Login</a>
-    
-
-{% endif %}
-<form action="{% url 'search' %}" class="form-inline my-2 my-lg-0" style="color: #fff;">
-    <input type="text" class="search-txt" name="project_name" placeholder="search"
-        style="border: 0px; border-bottom: 2px solid #fff; outline: none; margin-left: 17%;">
-        <i  aria-hidden="true"></i>
-    <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
-</form>
-</div>
-
-        </div>
-    </nav>
