adding client section

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -19,6 +19,7 @@
   <script src="https://kit.fontawesome.com/83d474e45f.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
   {% endblock %}
 </head>
 <style>
@@ -36,6 +37,7 @@ body{
   {% block content %}
   {%endblock%}
   {% block scripts %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   {% bootstrap_javascript %}
   {% endblock %}
