--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#"> <img
                 src="https://res.cloudinary.com/zilfa/image/upload/v1620411834/ibabababa-removebg-preview_vgqr63.png"
@@ -13,11 +13,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#HOME">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="#ABOUT">About Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#SERVICES">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#PORTFOLIO">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#TEAM">Team</a>
+                    </li>
+                    <a class="nav-link" href="#CLIENTS">Clients</a>
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -30,21 +41,7 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Portofolio
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Portofolio</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Clients</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="#CONTACT">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -63,6 +60,7 @@
         font-weight: 700;
         font-size: 14px;
         text-transform: uppercase;
+        font-family: tomate;
     }
 
     .navbar-dark .navbar-nav .nav-item {
