--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,22 +4,6 @@
     box-sizing: border-box;
 }
 
-h1 {
-    font-size: 36px;
-    color: #555;
-    font-weight: bold;
-    font-family: 'Abril Fatface', cursive;
-}
-
-h1::after {
-    content: '';
-    background: #333;
-    display: block;
-    height: 3px;
-    width: 110px;
-    margin: 10px auto;
-}
-
 .card-body h4 {
     font-size: 24px;
     color: #333;
@@ -288,80 +272,26 @@ input[type=text] {
 }
 
 .computer {
-    background-image: url("https://res.cloudinary.com/zilfa/image/upload/v1620392587/service-background_jqzjpk.jpg");
+    background-image:url("https://res.cloudinary.com/zilfa/image/upload/v1620392587/service-background_jqzjpk.jpg");
     background-size: cover;
     margin-top: 40px;
-    height: 60vh;
-}
-
-#service {
-    text-align: center;
-    color: white;
-    padding: 70px 0;
+    height: 55vh;
 }
 
 
 #service h3 {
-    text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 25px;
 }
 
 .textcolor{
-    color: #555;
+    color:black;
     font-weight: bold;
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.bg-dark{
-    background-color: black !important;
-}
-
-.navbar-dark .navbar-nav .nav-link{
-    font-weight: 700;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-
-.navbar-dark .navbar-nav .nav-item{
-    margin: 0 15px;
-}
 
 
-.carousel-item{
-    height: 92vh;
-    min-height: 200px;
-    background:no-repeat scroll center scroll;
-    -webkit-background-size: cover;
-    background-size: cover;
-  }
-  
-  .carousel-item::before{
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #000;
-    opacity: 0.4;
-  }
-  
-  .carousel-caption{
-    bottom: 270px;
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-  
-  .carousel-caption h5{
-    font-size: 35px;
-    font-weight: bold;
-    font-family: 'RocknRoll One', sans-serif;
-  }
-  
-  .carousel-caption p{
-    font-size: 18px;
-    top: 2rem;
-  }
+
+
